# skillmind

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
configs/: default.yml
src/skillmind/: __init__.py  config.py  context.py  embeddings.py  listener.py  migration.py  models.py  review.py  sanitizer.py  setup.py  trainer.py
src/skillmind/cli/: __init__.py  main.py
src/skillmind/exporters/: __init__.py  obsidian.py
src/skillmind/mcp/: __init__.py  server.py
src/skillmind/store/: __init__.py  base.py  chroma_store.py  faiss_store.py  pinecone_store.py  qdrant_store.py  supabase_store.py
src/skillmind/video/: __init__.py  screen_recorder.py  video_learner.py  youtube_learner.py
tests/: conftest.py  test_context.py  test_listener.py  test_migration.py  test_models.py  test_stores.py  test_trainer.py
website/: app.py  blog_admin.py  database.py  messages.pot  requirements.txt  seed_blog.py  wsgi.py
website/content/blog/de/: obsidian-wiki-ai-second-brain.html  obsidian-wiki-ai-second-brain.yml
website/content/blog/en/: obsidian-wiki-ai-second-brain.yml
website/static/css/: style.css
website/static/js/: main.js
website/templates/: base.html  blog_index.html  blog_post.html  docs.html  features.html  index.html
website/templates/admin/blog/: editor.html  index.html  login.html
website/translations/de/LC_MESSAGES/: messages.mo  messages.po
